<resources>
    <string name="app_name">OnlyOneEgg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_timer">Timer</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="timer_start">Start</string>
    <string name="timer_pause">Pause</string>
    <string name="recipeImage">CHICKEN</string>
    <string name="insertRecipe">Insert Recipe</string>
    <string name="insert">Insert</string>
    <string name="title_recipe">Recipe</string>
    <string name="saveAddRecipe">Save</string>
    <string name="plus">+</string>
    <string name="cookbookNameTextView">Enter a name for cookbook</string>
    <string name="addPictureCookbook">Add Picture</string>
    <string name="doneAddCookbook">Done</string>
    <string name="addCookbook">Add</string>
    <string name="recipeNameTextView">Enter a name for cookbook</string>
    <string name="addPictureRecipe">Add Picture</string>
    <string name="doneAddRecipe">Done</string>
    <string name="addRecipe">Add</string>
    <string name="cookbook_addRecipe">Add Recipe</string>
    <string name="cookbook_removeCookbook">Remove cookbook</string>
    <string name="minutesText">min.</string>
    <string name="searchButton">Search</string>
    <string name="searchText">Search</string>
    <string name="zutaten">Zutaten</string>
    <string name="remove">Remove</string>
    <string name="removeRecipe">RemoveRecipe</string>
    <string name="exportRecipes">Export Recipes</string>
    <string name="importRecipes">Import Recipes</string>
    <string name="dish">dish</string>
    <string name="error_happened">There is an error with read/write the File</string>
    <string name="saved">the file is exported</string>
    <string name="imported">the file is imported</string>
    <string name="external_storage_impossible_create_file">  external storage impossible create file</string>
    <string name="Error"> No file was found</string>
    <string name="difficultyTitle">  Difficulty </string>
    <string name="Cooktime">  Cooktime </string>

    <string name="action_export">Export Cookbook</string>
    <string name="action_import">Import Cookbook</string>
    <string name="action_remove_cookbook">Remove Cookbook</string>
    <string name="edit_recipe_name_text">Recipe name</string>
    <string name="save_the_recipe_button_text">save the recipe</string>
    <string name="edit_cooktime_in_hint">Cooktime in </string>
    <string name="edit_description_of_your_recipe_hint">Description of your recipe</string>
    <string name="add_ingredient_to_list_button_description">add ingredient to list</string>
    <string name="ingredient_name_hint">Ingredient name</string>
    <string name="amount_text">amount</string>
    <string name="timer_text_hint">Click on the field and input a time for your timer</string>
    <string name="_0">0</string>
    <string name="_0_00">0:00</string>
    <string name="start_button_description">start button</string>
    <string name="pause_button_description">pause button</string>
    <string name="stop_button_description">stop button</string>

</resources>