<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addRecipeViewModel"
            type="de.fherfurt.onlyoneegg.view.ui.recipe.AddRecipeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        tools:context=".view.ui.recipe.AddRecipeFragment">

        <EditText
            android:id="@+id/editRecipeNameText"
            android:layout_width="0dp"
            android:layout_height="@dimen/inputHeight"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="RecipeName"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintRight_toLeftOf="@id/saveRecipeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveRecipeButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/inputHeight"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/saveAddRecipe"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/editRecipeNameText"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editRecipeCooktime"
            android:layout_width="0dp"
            android:layout_height="@dimen/inputHeight"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Cooktime in minutes"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintRight_toLeftOf="@id/minuteText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRecipeNameText" />

        <TextView
            android:id="@+id/minuteText"
            android:layout_width="40dp"
            android:layout_height="@dimen/inputHeight"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:text="@string/minutesText"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/editRecipeCooktime"
            app:layout_constraintRight_toLeftOf="@id/difficultySpinner"
            app:layout_constraintTop_toBottomOf="@+id/editRecipeNameText" />

        <Spinner
            android:id="@+id/difficultySpinner"
            android:layout_width="0dp"
            android:layout_height="@dimen/inputHeight"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/minuteText"
            app:layout_constraintTop_toBottomOf="@+id/editRecipeNameText" />

        <EditText
            android:id="@+id/editRecipeDescriptionText"
            android:layout_width="0dp"
            android:layout_height="166dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Description of your recipe"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRecipeCooktime" />

        <Button
            android:id="@+id/addIngredientButton"
            android:layout_width="@dimen/inputHeight"
            android:layout_height="@dimen/inputHeight"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/plus"
            app:layout_constraintRight_toLeftOf="@id/editIngredientNameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRecipeDescriptionText" />

        <EditText
            android:id="@+id/editIngredientNameText"
            android:layout_width="0dp"
            android:layout_height="@dimen/inputHeight"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Ingredient name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintLeft_toRightOf="@id/addIngredientButton"
            app:layout_constraintRight_toLeftOf="@id/editIngredientAmountText"
            app:layout_constraintTop_toBottomOf="@+id/editRecipeDescriptionText" />

        <EditText
            android:id="@+id/editIngredientAmountText"
            android:layout_width="100dp"
            android:layout_height="@dimen/inputHeight"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="amount"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintLeft_toRightOf="@id/editIngredientNameText"
            app:layout_constraintRight_toLeftOf="@id/measurementSpinner"
            app:layout_constraintTop_toBottomOf="@+id/editRecipeDescriptionText" />

        <Spinner
            android:id="@+id/measurementSpinner"
            android:layout_width="0dp"
            android:layout_height="@dimen/inputHeight"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/editIngredientAmountText"
            app:layout_constraintTop_toBottomOf="@+id/editRecipeDescriptionText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredient_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editIngredientNameText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>